objects/CSS_WS_Make_And_Model__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Local Catalogue for Make and Model data</description>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>CSS_WS_Access_Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Application_Category__c</fullName>
        <label>CSS_WS_Application_Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Configuration__c</fullName>
        <label>CSS_WS_Configuration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Family_Code__c</fullName>
        <label>CSS_WS_Engine_Family_Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equipment_Id__c</fullName>
        <label>CSS_WS_Equipment_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Make__c</fullName>
        <label>CSS_WS_Make</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Model__c</fullName>
        <label>CSS_WS_Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Status__c</fullName>
        <label>CSS_WS_Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>CSS_WS_Unique_Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CSS WS Make And Model</label>
</CustomObject>